src/App.css
.fill-height {
  height: calc(100vh - 150px);
}

.blocklyTreeLabel {
  font-family: "Fredoka", sans-serif;
}

.blocklyTreeRow {
  padding-bottom: 4px;
  border-radius: 6px;
}

.blocklyTreeIcon {
  background-size: contain;
  visibility: visible;
  margin-left: 2px;
  margin-right: 2px;
}

.blocklyTreeIcon {
  background-image: none;
  margin-left: 4px;
}

.blocklyToolboxCategory {
  margin: 2px;
}

.blocklyToolboxDiv {
  z-index: 2;
}

.blocklyFlyout {
  transition: transform ease-in-out 0.5s, visibility ease-in-out 0.5s;
  z-index: 1;
}

.blocklyFlyout[style*="display: none"] {
  transform: translate(-275px) !important;
  display: block !important;
  visibility: hidden;
}

.blocklyFlyout[style*="display: block"] {
  /* transform: translate(200px) !important; */
}


.save-btn {
  z-index: 1;
}

.unsaved-message {
  margin-bottom: .5rem !important;
}

.unsaved-message .message-body {
  padding: 0.75em 0.75em !important;
}

#filter-dropdown-menu {
  max-width: 100%;
  width: 100%;
}

.filter-item {
  margin-bottom: 0 !important;
}

.preview-column {
  width: 500px;
}

.blockly-column {
  position: relative;
}

.filter-navigator {
  position: absolute;
  z-index: 2;
  left: 125px;
  bottom: 8px;
}

.filter-dropdown-content {
  max-height: 20em;
  overflow: auto;
}

